--- a/default.env
+++ b/default.env
@@ -5,6 +5,8 @@ CELO_ACCOUNT=0xsumthin
 VERBOSITY=3
 CELO_DOCKER_TAG=mainnet
 P2P_PORT=30303
+RPC_PORT=8545
+WS_PORT=8546
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
 RPC_HOST=celo
