--- a/rpc-shared.yml
+++ b/rpc-shared.yml
@@ -3,5 +3,5 @@ version: "3.9"
 services:
   celo:
     ports:
-      - 8545:8545/tcp
-      - 8546:8546/tcp
+      - ${RPC_PORT}:${RPC_PORT}/tcp
+      - ${WS_PORT}:${WS_PORT}/tcp
