Dummy prune without sh support, won't actually work

--- a/celo.yml
+++ b/celo.yml
@@ -83,6 +83,15 @@ services:
       - metrics.scrape=true
       - metrics.path=/debug/metrics/prometheus
       - metrics.port=6060
+  set-prune-marker:
+    profiles: ["tools"]
+    image: alpine:3
+    user: "10001:10001"
+    restart: "no"
+    volumes:
+      - geth-eth1-data:/var/lib/goethereum
+    entrypoint: ["/bin/sh","-c"]
+    command: /bin/sh
 
 volumes:
   celo-data:
