--- a/celo.yml
+++ b/celo.yml
@@ -89,7 +89,7 @@ services:
     user: "10001:10001"
     restart: "no"
     volumes:
-      - geth-eth1-data:/var/lib/goethereum
+      - celo-data:/var/lib/celo
     entrypoint: ["/bin/sh","-c"]
     command: /bin/sh
 
