--- a/default.env
+++ b/default.env
@@ -2,6 +2,7 @@
 COMPOSE_FILE=celo.yml
 # Set this to an EVM account that can receive rewards
 CELO_ACCOUNT=0xsumthin
+SYNCMODE=fast
 VERBOSITY=3
 CELO_DOCKER_TAG=mainnet
 P2P_PORT=30303
