--- a/celo.yml
+++ b/celo.yml
@@ -25,7 +25,7 @@ services:
       - --datadir
       - /var/lib/celo
       - --syncmode
-      - full
+      - ${SYNCMODE}
       - --http
       - --http.addr
       - 0.0.0.0
