--- a/default.env
+++ b/default.env
@@ -15,4 +15,5 @@ RPC_LB=celo-lb
 WS_HOST=celows
 WS_LB=celows-lb
 
-COMPOSEV1_NAG=true
+# Used by celod update - please do not adjust
+ENV_VERSION=1
