--- a/celo.yml
+++ b/celo.yml
@@ -82,6 +82,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/debug/metrics/prometheus
       - metrics.port=6060
+      - metrics.network=celo
   set-prune-marker:
     profiles: ["tools"]
     image: alpine:3
