Adjust for Celo 1.8.5

--- a/celo.yml
+++ b/celo.yml
@@ -19,8 +19,7 @@ services:
       - ${P2P_PORT}:${P2P_PORT}/udp
     <<: *logging
     entrypoint:
-      - sh
-      - /run_geth_in_docker.sh
+      - geth
       - --datadir
       - /var/lib/celo
       - --syncmode
